--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2064,6 +2064,71 @@ LoRA已经有广泛的应用，如LLaMA和BLOOM，
 
 huggingface开源了[Peft: State-of-the-art parameter-efficient fine- tuning methods](https://github.com/huggingface/peft)，包括LoRA/AdaLoRA、前缀微调、P-Tuning、提示微调，支持GPT-2和LLaMA，还支持视觉Transformer如ViT和Swin Transformer。
 
+#### lora变种
+
+[DoRA: Weight-Decomposed Low-Rank Adaptation](https://arxiv.org/pdf/2402.09353.pdf)
+
+[https://github.com/catid/dora](https://github.com/catid/dora)
+
+LoRA可以认为是对Finetune微调的一种低秩近似，通过增加Rank，LoRA可以达到类似Finetune的微调效果。因此之前多数研究都把LoRA和Finetune在微调准确性上的差异归结为二者的优化参数量不同。
+
+但经过分析发现，lora的学习模式和FT很不一样，更偏向于大开大合，即**方向**和**幅度**呈很**强的正相关**，可能对**更精细的学习有害**
+
+![dora](../assets/dora.png)
+
+dora通过同时关注权重更新时的**大小**和**方向变化**，实现了比LoRA**更加接近finetune**微调效果：
+
++ w拆成magnitude($$norm$$)乘以direction($$1/norm \times w$$)
++ magnitude不变，direction里的$$1/norm$$用lora更新
+
+注意，这里的norm是column-wise的norm，即输入$$d\times k$$的矩阵，**每一列**的元素算一个norm（平方和开根号）得到一个数，最终就是$$1\times k$$的矩阵
+
+```python
+# This layer is dropped into your pre-trained PyTorch model where nn.Linear is used
+class DoRALayer(nn.Module):
+    def __init__(self, d_in, d_out, rank=4, weight=None, bias=None):
+        super().__init__()
+
+        if weight is not None:
+            self.weight = nn.Parameter(weight, requires_grad=False)
+        else:
+            self.weight = nn.Parameter(torch.Tensor(d_out, d_in), requires_grad=False)
+
+        if bias is not None:
+            self.bias = nn.Parameter(bias, requires_grad=False)
+        else:
+            self.bias = nn.Parameter(torch.Tensor(d_out), requires_grad=False)
+
+        # m = Magnitude column-wise across output dimension
+        self.m = nn.Parameter(self.weight.norm(p=2, dim=0, keepdim=True))
+        
+        std_dev = 1 / torch.sqrt(torch.tensor(rank).float())
+        self.lora_A = nn.Parameter(torch.randn(d_out, rank)*std_dev)
+        self.lora_B = nn.Parameter(torch.zeros(rank, d_in))
+
+    def forward(self, x):
+        lora = torch.matmul(self.lora_A, self.lora_B)
+        adapted = self.weight + lora
+        column_norm = adapted.norm(p=2, dim=0, keepdim=True)
+        norm_adapted = adapted / column_norm
+        calc_weights = self.m * norm_adapted
+        return F.linear(x, calc_weights, self.bias)
+
+## 使用
+def replace_linear_with_dora(model):
+    for name, module in model.named_children():
+        if isinstance(module, nn.Linear):
+            # Get the input and output dimensions of the current nn.Linear layer
+            d_in = module.in_features
+            d_out = module.out_features
+
+            # Create a new DoRALayer with the same dimensions
+            setattr(model, name, DoRALayer(d_out=d_out, d_in=d_in, weight=module.weight.data.clone(), bias=module.bias.data.clone()))
+        else:
+            # Recursively apply this function to submodules
+            replace_linear_with_dora(module)
+
+```
 
 # 使用
 
@@ -2887,6 +2952,13 @@ tokenizer：BPE，使用sentencepiece的实现。将所有numbers切成单个数
 [马斯克开源Grok-1：3140亿参数迄今最大，权重架构全开放，磁力下载](https://mp.weixin.qq.com/s/hvt5zwoazDx26KOaKuTs_w)
 
 [https://github.com/xai-org/grok-1](https://github.com/xai-org/grok-1)
+
+[马斯克发布Grok 1.5！ 编码和数学能力大幅提升](https://mp.weixin.qq.com/s/QwM1uk61o1DMpe5EPq9giQ)
+
++ 上下文窗口提升16倍，达到128k
++ 不使用通用的Python语言+Pytorch框架，采用分布式训练架构，使用Rust、JAX+Kubernetes构建。
++ 提出了自定义训练协调器，可自动检测到有问题的节点，然后剔除。
++ 优化了checkpointing、数据加载和训练重启等流程，最大限度地减少故障停机时间。
 
 # 多智能体
 
