--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -805,6 +805,10 @@ poso
 
 [https://daiwk.github.io/posts/dl-graph-representations.html](https://daiwk.github.io/posts/dl-graph-representations.html)
 
+# RL
+
+[快手强化学习与多任务推荐](https://mp.weixin.qq.com/s/QWnpM_n0RcP8nXlwXkuTlg)
+
 # bias v.s. debias
 
 [推荐系统炼丹笔记：推荐系统Bias大全 \| Debias方法综述](https://blog.csdn.net/m0_52122378/article/details/110950122)
