--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -805,6 +805,13 @@ poso
 
 [https://daiwk.github.io/posts/dl-graph-representations.html](https://daiwk.github.io/posts/dl-graph-representations.html)
 
+
+[SIGIR2022 \| SimGCL: 面向推荐系统的极简图对比学习方法](https://zhuanlan.zhihu.com/p/509511858)
+
+[Are Graph Augmentations Necessary? Simple Graph Contrastive Learning for Recommendation](https://arxiv.org/abs/2112.08679)
+
+[https://github.com/Coder-Yu/QRec](https://github.com/Coder-Yu/QRec)
+
 # RL
 
 [快手强化学习与多任务推荐](https://mp.weixin.qq.com/s/QWnpM_n0RcP8nXlwXkuTlg)
