--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -963,6 +963,21 @@ PLM（pretrained language models），即bert等
 + 学习一个reward函数来预测人类偏好
 + 用强化学习和拒绝采样来优化reward函数
 
+
+注：[重要性采样和拒绝采样](https://zhuanlan.zhihu.com/p/664233442)
+
++ **重要性采样**的关键是**降低方差**：因为相同的样本量，用$$\pi(x)$$分布采样得到的结果方差较大(或者是$$\pi(x)$$不好采样)，而用$$p(x)$$采样的样本得到的结果方差较小，用来估计原分布$$\pi(x)$$
++ **拒绝采样**：引入易于采样的分布$$Q(x)$$，然后从中随机地筛掉某些样本(根据**接受概率**接受或者拒绝样本)，使得剩下的样本服从分布$$P(x)$$
+
+拒绝采样的步骤：
+
++ 从辅助分布$$Q(x)$$中采样得到样本$$x_i$$
++ 计算接受概率$$A = P(x_i) / (M \times Q(x_i))$$，其中$$M$$是一个常数，满足$$P(x) \leq M \times Q(x)$$对于所有$$x$$成立
++ 以概率$$A$$接受样本$$x_i$$，即生成一个随机数$$u$$，如果$$u \leq A$$，则接受样本$$x_i$$；否则拒绝样本$$x_i$$。
+
+重复上述步骤，直到获得足够数量的样本。
+
+
 #### InstructGPT
 
 &nbsp;
