--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1349,6 +1349,10 @@ Med-PaLM2([Towards expert- level medical question answering with large language 
 
 ![flan](../assets/flan.png)
 
+一些instruction template：
+
+![flan-instruction-template](../assets/flan-instruction-template.png)
+
 [https://github.com/google-research/flan](https://github.com/google-research/flan)
 
 ### Gopher
