--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2937,6 +2937,10 @@ Flan-T5和Flan-PaLM（[Scaling instruction-finetuned language models](https://ar
 + Anthropic：1000w-520亿参数的transformer，并按“有用、诚实和无害”的标准在上下文线索上蒸馏原始LM
 + DeepMind：在[Teaching language models to support answers with verified quotes](https://arxiv.org/pdf/2203.11147.pdf)提出的GopherCite模型中，用的是2800亿的模型Gopher([Scaling language models: Methods, analysis & insights from training gopher](https://arxiv.org/pdf/2112.11446.pdf))
 
+[剖析大模型Pretrain和SFT阶段的Loss差异](https://zhuanlan.zhihu.com/p/652657011)
+
+不管是PreTraining阶段还是SFT阶段，loss函数都是一样的，只是计算的方式存在差异，PreTraining阶段计算的是整段输入文本的loss，而SFT阶段计算的是**response部分的loss**。
+
 ## rm
 
 ![rlhf-rm](../assets/rlhf-rm.png)
