--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1521,11 +1521,38 @@ Med-PaLM2([Towards expert- level medical question answering with large language 
 
 [Gemma: Open Models Based on Gemini Research and Technology](https://storage.googleapis.com/deepmind-media/gemma/gemma-report.pdf)
 
+代码：
+
+[https://github.com/huggingface/transformers/blob/main/src/transformers/models/gemma/modeling_gemma.py](https://github.com/huggingface/transformers/blob/main/src/transformers/models/gemma/modeling_gemma.py)
+
 
 #### 架构&训练方法
 
 + moe：
     + 
+
+
+### codegemma
+
+&nbsp;
+
++ 专门处理代码补全和代码生成任务的 7B 预训练变体
++ 用于代码聊天和指令跟随的 7B 指令调优变体
++ 在本地计算机上运行快速代码补全的 2B 预训练变体
+
+[CodeGemma: Open Code Models Based on Gemma](https://storage.googleapis.com/deepmind-media/gemma/codegemma_report.pdf)
+
+![codegemma](../assets/codegemma.png)
+
+### RecurrentGemma
+
+基于 Griffin 架构，将全局注意力替换为**局部注意力**和**线性循环（linear recurrences）**的混合，在生成长序列时实现快速推理。
+
+[RecurrentGemma: Moving Past Transformers for Efficient Open Language Models](https://storage.googleapis.com/deepmind-media/gemma/recurrentgemma-report.pdf)
+
+[https://github.com/huggingface/transformers/blob/main/src/transformers/models/recurrent_gemma/modeling_recurrent_gemma.py](https://github.com/huggingface/transformers/blob/main/src/transformers/models/recurrent_gemma/modeling_recurrent_gemma.py)
+
+
 
 ### Claude
 
@@ -3488,6 +3515,19 @@ decoder的并行化： [https://zhuanlan.zhihu.com/p/368592551](https://zhuanlan
 
 [Mixture-of-Depths: Dynamically allocating compute in transformer-based language models](https://arxiv.org/pdf/2404.02258.pdf)
 
+## Google的几大LLM加速工具
+
+### maxdiffusion
+
+[https://github.com/google/maxdiffusion](https://github.com/google/maxdiffusion)
+
+### JetStream
+
+[https://github.com/google/JetStream](https://github.com/google/JetStream)
+
+### maxtext
+
+[https://github.com/google/maxtext](https://github.com/google/maxtext)
 
 # 多模态（图像）
 
@@ -4455,6 +4495,8 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 [RNN效率媲美Transformer，谷歌新架构两连发：同等规模强于Mamba](https://mp.weixin.qq.com/s/RtAZiEzjRWgqQw3yu3lvcg)
 
+
+
 # 个性化搜索
 
 随便找一篇[Denoising Attention for Query-aware User Modeling in Personalized Search](https://arxiv.org/pdf/2308.15968.pdf)，来看看它的参考文献：
@@ -4554,6 +4596,10 @@ $$
 # RAG
 
 [Retrieval-Augmented Generation for Large Language Models: A Survey](https://arxiv.org/pdf/2312.10997.pdf)
+
+[RAG全链路的关键模块解析](https://mp.weixin.qq.com/s/kNjOgfQs6yErNtRg6wFA3g)
+
+[Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks](https://proceedings.neurips.cc/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf)
 
 # 其他
 
