--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1216,9 +1216,9 @@ tokenizer：BPE，使用sentencepiece的实现。将所有numbers切成单个数
 
 + SwiGLU激活函数(PaLM)：取代ReLU，[Glu variants improve trans- former](https://arxiv.org/abs/2002.05202)，把PaLM里的$$4d$$改了$$2/34d$$
 
-说白了就是输入$$x$$，SwiGLU激活完是$$swish(w_1(x)) * w_2(x)$$，其中swish又叫silu，是$$f(x)=x \cdot sigmoid(x)$$
+说白了就是输入$$x$$，SwiGLU激活完是$$swish(w_1(x)) * w_3(x)$$，其中swish又叫silu，是$$f(x)=x \cdot sigmoid(x)$$
 
-然后再过一个$$w_3$$，得到$$w_3(swish(w_1(x)) * w_2(x))$$就是最终的ffn输出
+然后再过一个$$w_2$$，得到$$w_2(swish(w_1(x)) * w_3(x))$$就是最终的ffn输出
 
 以下是transformers里的实现：[https://github.com/huggingface/transformers/blob/main/src/transformers/models/llama/modeling_llama.py](https://github.com/huggingface/transformers/blob/main/src/transformers/models/llama/modeling_llama.py)
 
@@ -1232,7 +1232,7 @@ class LlamaMLP(nn.Module):
         self.gate_proj = nn.Linear(self.hidden_size, self.intermediate_size, bias=False)
         self.up_proj = nn.Linear(self.hidden_size, self.intermediate_size, bias=False)
         self.down_proj = nn.Linear(self.intermediate_size, self.hidden_size, bias=False)
-        self.act_fn = ACT2FN[config.hidden_act]
+        self.act_fn = ACT2FN[config.hidden_act] ## 默认是silu，即swish
 
     def forward(self, x):
         if self.config.pretraining_tp > 1:
