--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3531,6 +3531,18 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 [专访月之暗面杨植麟：lossless long context is everything](https://mp.weixin.qq.com/s/UMY0qZsCGh87KnW4wjfvoA)
 
+### longRoPE
+
+[LongRoPE：超越极限，将大模型上下文窗口扩展超过200万tokens](https://mp.weixin.qq.com/s/4ryyv59ofNOD--RCSdqktQ)
+
+### MEGALODON
+
+[Meta无限长文本大模型来了：参数仅7B，已开源](https://mp.weixin.qq.com/s/VML5hExo5iPsyEavxzIZSA)
+
+[MEGALODON: Efficient LLM Pretraining and Inference with Unlimited Context Length](https://arxiv.org/pdf/2404.08801.pdf)
+
+[https://github.com/XuezheMax/megalodon](https://github.com/XuezheMax/megalodon)
+
 ## llm+db
 
 [长文本杀不死RAG：SQL+向量驱动大模型和大数据新范式，MyScale AI数据库正式开源](https://mp.weixin.qq.com/s/JvyKnEbdOSb1fTwhiQTO5A)
