--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3601,14 +3601,6 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 [LongRoPE：超越极限，将大模型上下文窗口扩展超过200万tokens](https://mp.weixin.qq.com/s/4ryyv59ofNOD--RCSdqktQ)
 
-### MEGALODON
-
-[Meta无限长文本大模型来了：参数仅7B，已开源](https://mp.weixin.qq.com/s/VML5hExo5iPsyEavxzIZSA)
-
-[MEGALODON: Efficient LLM Pretraining and Inference with Unlimited Context Length](https://arxiv.org/pdf/2404.08801.pdf)
-
-[https://github.com/XuezheMax/megalodon](https://github.com/XuezheMax/megalodon)
-
 ## llm+db
 
 [长文本杀不死RAG：SQL+向量驱动大模型和大数据新范式，MyScale AI数据库正式开源](https://mp.weixin.qq.com/s/JvyKnEbdOSb1fTwhiQTO5A)
@@ -4770,6 +4762,11 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 [RNN效率媲美Transformer，谷歌新架构两连发：同等规模强于Mamba](https://mp.weixin.qq.com/s/RtAZiEzjRWgqQw3yu3lvcg)
 
+
+## feedback attention memory
+
+[TransformerFAM: Feedback attention is working memory](https://arxiv.org/pdf/2404.09173.pdf)
+
 ## infini-attention
 
 [Leave No Context Behind: Efficient Infinite Context Transformers with Infini-attention](https://arxiv.org/pdf/2404.07143.pdf)
@@ -4784,9 +4781,48 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 ![infini-attention-vs-transformer-xl](../assets/infini-attention-vs-transformer-xl.png)
 
-## feedback attention memory
 
-[TransformerFAM: Feedback attention is working memory](https://arxiv.org/pdf/2404.09173.pdf)
+## MEGALODON
+
+[Meta无限长文本大模型来了：参数仅7B，已开源](https://mp.weixin.qq.com/s/VML5hExo5iPsyEavxzIZSA)
+
+[革命新架构掀翻Transformer！无限上下文处理，2万亿token碾压Llama 2](https://mp.weixin.qq.com/s/xgP9P51gjqJ93FYSWfPeaA)
+
+[MEGALODON: Efficient LLM Pretraining and Inference with Unlimited Context Length](https://arxiv.org/pdf/2404.08801.pdf)
+
+[https://github.com/XuezheMax/megalodon](https://github.com/XuezheMax/megalodon)
+
+[Megalodon: Efficient LLM Pretraining and Inference with Unlimited Context Length](https://arxiv.org/pdf/2404.08801.pdf)
+
+能够同时实现
+
++ 高效训练（减少通信和计算量）
++ 高效推理（保持恒定的KV缓存）
+
+### mega
+
+[Mega: Moving average equipped gated attention](https://arxiv.org/pdf/2209.10655.pdf)
+
+[https://github.com/facebookresearch/mega](https://github.com/facebookresearch/mega)
+
+![mega](../assets/mega.png)
+
+先看对于序列长度=$$n$$的标准的self-attention
+
+$$
+\boldsymbol{Y}=\operatorname{Attn}(\boldsymbol{X})=f\left(\frac{\boldsymbol{Q} \boldsymbol{K}^T}{\tau(\boldsymbol{X})}\right) \boldsymbol{V}
+$$
+
+$$
+\boldsymbol{Q}=\boldsymbol{X} W_q+b_q,\boldsymbol{K}=\boldsymbol{X} W_k+b_k,\boldsymbol{V}=\boldsymbol{X} W_v+b_v
+$$
+
+其中，$$\text { Attn : } \mathbb{R}^{n \times d} \rightarrow \mathbb{R}^{n \times d}$$，$$W_q, W_k, W_v \in \mathbb{R}^{d \times d}$$，$$b_q, b_k, b_v \in \mathbb{R}^d$$，而且有两种定义方式：
+
++ $$f(\cdot)=f_{\text {softmax }}(\cdot)$$，同时$$\tau(\boldsymbol{X})=\sqrt{d}$$，这是经典操作[Neural Machine Translation by Jointly Learning to Align and Translate](https://arxiv.org/pdf/1409.0473.pdf)
++ $$f(\cdot)=f_{\mathrm{relu}^2}(\cdot)$$，同时$$\tau(\boldsymbol{X})=n$$，这是[Primer: Searching for efficient transformers for language modeling](https://arxiv.org/pdf/2109.08668.pdf)和[Transformer Quality in Linear Time](https://arxiv.org/pdf/2202.10447.pdf)提出的
+
+对于$$h$$个attention heads，计算$$\boldsymbol{A}=f\left(\frac{\boldsymbol{Q} \boldsymbol{K}^T}{\tau(\boldsymbol{X})}\right) \in \mathbb{R}^{n \times n}$$需要的时间和空间复杂度都是$$O(hn^2)$$
 
 # 个性化搜索
 
