--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1439,6 +1439,11 @@ Llama 3的主要亮点：
 
 [https://github.com/meta-llama/llama3](https://github.com/meta-llama/llama3)
 
+[多模态 Llama-3 它来了 ！！[全网首发微调教程]](https://mp.weixin.qq.com/s/IFVIkVvMqeAL0lZF9OvRSA)
+
+[https://github.com/InternLM/XTuner](https://github.com/InternLM/XTuner)
+
+
 ### Alpaca
 
 &nbsp;
@@ -3924,6 +3929,14 @@ DALL-E3：
 
 [https://github.com/FoundationVision/VAR](https://github.com/FoundationVision/VAR)
 
+## cobra
+
+[首个基于Mamba的MLLM来了！模型权重、训练代码等已全部开源](https://mp.weixin.qq.com/s/KuuNTL_jBRsyhub5_6aXpQ)
+
+[Cobra: Extending Mamba to Multi-Modal Large Language Model for Efficient Inference](https://arxiv.org/pdf/2403.14520.pdf)
+
+[https://github.com/h-zhao1997/cobra](https://github.com/h-zhao1997/cobra)
+
 
 # 多模态（视频）
 
@@ -5046,6 +5059,10 @@ $$
 [RAG全链路的关键模块解析](https://mp.weixin.qq.com/s/kNjOgfQs6yErNtRg6wFA3g)
 
 [Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks](https://proceedings.neurips.cc/paper/2020/file/6b493230205f780e1bc26945df7481e5-Paper.pdf)
+
+[Meta提出全新文档级嵌入框架，利用LLM来增强信息检索能力](https://mp.weixin.qq.com/s/RCRHjrW6jF167HG169aFwg)
+
+[LLM-Augmented Retrieval: Enhancing Retrieval Models Through Language Models and Doc-Level Embedding](https://arxiv.org/pdf/2404.05825.pdf)
 
 # 其他
 
