--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -4549,6 +4549,70 @@ $$
 + $$\phi_1$$和$$\phi_2$$是激活函数，都是SiLU([Sigmoid-weighted linear units for neural network function approximation in reinforcement learning](https://arxiv.org/pdf/1702.03118.pdf))，其实就是Swish，即$$f(x)=x \cdot sigmoid(x)$$
 + $${rab}^{p, t}$$是relative attention bias，考虑了位置$$p$$和时间$$t$$(参考T5论文，[Exploring the limits of transfer learning with a unified text-to-text transformer](https://arxiv.org/pdf/1910.10683.pdf))，其实是在[Self-attention with relative position representations](https://arxiv.org/pdf/1803.02155.pdf)一文提出的
 
+对应到代码里：
+
+```python
+self._linear_dim: int = linear_hidden_dim
+self._uvqk = torch.nn.Parameter(
+    torch.empty((embedding_dim, linear_hidden_dim * 2 * num_heads + 
+        attention_dim * num_heads * 2)).normal_(mean=0, std=0.02),
+)
+
+##...
+
+batched_mm_output = torch.mm(normed_x, self._uvqk)
+if self._linear_activation == "silu":
+    batched_mm_output = F.silu(batched_mm_output)
+elif self._linear_activation == "none":
+    batched_mm_output = batched_mm_output
+# 其实就是先乘一个大矩阵，再拆成4份，等价于乘4个小矩阵
+u, v, q, k = torch.split(
+    batched_mm_output,
+    [self._linear_dim * self._num_heads, self._linear_dim * self._num_heads, 
+    self._attention_dim * self._num_heads, self._attention_dim * self._num_heads],
+    dim=1,
+)
+
+if self._normalization == "rel_bias" or self._normalization == "hstu_rel_bias":
+    if delta_x_offsets is not None:
+        padded_q, padded_k = cached_q, cached_k
+        flattened_offsets = delta_x_offsets[1] + torch.arange(start=0, end=B * n, 
+            step=n, device=delta_x_offsets[1].device, dtype=delta_x_offsets[1].dtype)
+        padded_q = padded_q.view(B * n, -1).index_copy_(
+            dim=0, index=flattened_offsets, source=q,
+        ).view(B, n, -1)
+        padded_k = padded_k.view(B * n, -1).index_copy_(
+            dim=0, index=flattened_offsets, source=k,
+        ).view(B, n, -1)
+    else:
+        padded_q = torch.ops.fbgemm.jagged_to_padded_dense(
+            values=q, offsets=[x_offsets], max_lengths=[n], padding_value=0.0
+        )
+        padded_k = torch.ops.fbgemm.jagged_to_padded_dense(
+            values=k, offsets=[x_offsets], max_lengths=[n], padding_value=0.0
+        )
+
+    qk_attn = torch.einsum(
+        "bnhd,bmhd->bhnm",
+        padded_q.view(B, n, self._num_heads, self._attention_dim),
+        padded_k.view(B, n, self._num_heads, self._attention_dim),
+    )
+    if all_timestamps is not None:
+        qk_attn = qk_attn + self._rel_attn_bias(all_timestamps).unsqueeze(1)
+    qk_attn = F.silu(qk_attn) / n
+    qk_attn = qk_attn * invalid_attn_mask.unsqueeze(0).unsqueeze(0)
+    attn_output = torch.ops.fbgemm.dense_to_jagged(
+        torch.einsum(
+            "bhnm,bmhd->bnhd",
+            qk_attn,
+            torch.ops.fbgemm.jagged_to_padded_dense(v, [x_offsets], [n]).\
+                reshape(B, n, self._num_heads, self._linear_dim)
+        ).reshape(B, n, self._num_heads * self._linear_dim),
+        [x_offsets],
+    )[0]
+
+```
+
 DLRM的3部分：
 
 + 特征抽取：常见的基础版本是离散特征pooling，高级版本是din。HSTU本来就能做这种target-aware的attention
