--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -4979,7 +4979,13 @@ $$
 
 ![ssm](../assets/ssm.png)
 
-其中，$$\boldsymbol{A},\boldsymbol{B},\boldsymbol{C},\boldsymbol{D}$$都是$$ \mathbb{R}^{N\timesN}$$的矩阵，$$x^{\prime}(t):=\frac{d}{d t} \mathbf{x}(t)$$是$$x(t)$$关于$$t$$的导数，所以图里有一个**积分**操作把它变回$$x(t)$$
+各变量含义如下（看起来和RNN很像）：
+
++ $$\boldsymbol{A}\in \mathbb{R}^{N\timesN}$$：状态矩阵
++ $$\boldsymbol{B}\in \mathbb{R}^{N\timesN}$$：输入矩阵
++ $$\boldsymbol{C}\in \mathbb{R}^{N\timesN}$$：输出矩阵
++ $$\boldsymbol{D}\in \mathbb{R}^{N\timesN}$$：feedforward矩阵或者feedthrough矩阵
++ $$x^{\prime}(t):=\frac{d}{d t} \mathbf{x}(t)$$是$$x(t)$$关于$$t$$的导数，所以图里有一个**积分**$$\int$$操作把它变回$$x(t)$$
 
 假设序列长度为$$L$$，那么
 
