--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -4027,12 +4027,19 @@ DALL-E3：
 
 [Hyper-SD: Trajectory Segmented Consistency Model for Efficient Image Synthesis](https://arxiv.org/pdf/2404.13686)
 
-# TextSquare
+## TextSquare
 
 [8B文字多模态大模型指标逼近GPT4V，字节、华师、华科联合提出TextSquare](https://mp.weixin.qq.com/s/zFsZsEgHtMUJMye_56j9Cw)
 
 [TextSquare: Scaling up Text-Centric Visual Instruction Tuning](https://arxiv.org/pdf/2404.12803)
 
+## neural network diffusion
+
+[用扩散模型生成网络参数，LeCun点赞尤洋团队新研究](https://mp.weixin.qq.com/s/kVY0UrLrfb3_2ZmIFlGxVg)
+
+[Neural Network Diffusion](https://arxiv.org/pdf/2402.13144.pdf)
+
+[https://github.com/NUS-HPC-AI-Lab/Neural-Network-Diffusion](https://github.com/NUS-HPC-AI-Lab/Neural-Network-Diffusion)
 
 # 多模态（视频）
 
@@ -4933,7 +4940,6 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 
 
-
 ### time-LLM
 
 [谁说大象不能起舞! 重编程大语言模型实现跨模态交互的时序预测 | ICLR 2024](https://mp.weixin.qq.com/s/K04haPMcbKiS6OkCihXAqQ)
@@ -4946,6 +4952,55 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 
 + 时序输入重编程
 + 提示做前缀
+
+### NoteLLM
+
+[WWW'24 | 小红书NoteLLM: 大语言模型用于I2I笔记推荐](https://mp.weixin.qq.com/s/jcj4jKaEIg-L264uZgYuAw)
+
+[NoteLLM: A Retrievable Large Language Model for Note Recommendation](https://arxiv.org/pdf/2403.01744)
+
+3个任务：
+
++ I2I笔记推荐任务: 给定目标笔记,基于LLM从内容池中找出top-k个相似笔记。
++ 主题标签生成任务:基于笔记的标题和笔记的内容, 使用LLM生成对应的k个主题标签。
++ 类目生成任务:基于笔记的标题,内容,主题标签使用LLM生成对应的类目。
+
+笔记压缩prompt：
+
+```
+[bos]<instruction><input notes>The compression word is:"[EMB]".<output guidance><output>[eos]
+```
+
+其中的[EMB]是一个特殊token，
+
+![notellm](../assets/notellm.png)
+
+#### 生成式对比学习
+
+生成式对比学习(Generative-Contrastive Learning,GCL)
+
++ 通过统计共现信息，同时打压热门，得到item pair对
++ 由于LLMs的自回归特性, 将[EMB]的**前一个token**对应的**最后一个隐层输出**经过一个linear layer得到一个d维向量
+
+对于batchsize=B的batch来说，有B个pair对，即2B个item，那么对它们算一个对比学习的loss，其中的sim是cos相似度：
+
+$$
+L_{c l}=-\frac{1}{2 B} \sum_{i=1}^{2 B} \log \frac{e^{\operatorname{sim}\left(\boldsymbol{n}_i, \boldsymbol{n}_i^{+}\right) \cdot e^\tau}}{\sum_{j \in[2 B] \backslash\{i\}} e^{\operatorname{sim}\left(\boldsymbol{n}_i, \boldsymbol{n}_j\right) \cdot e^\tau}}
+$$
+
+#### 协同监督微调
+
+协同监督微调(Collaborative Supervised Fine-Tuning,CSFT)将主题标签生成任务和类目生成任务联合训练，一个batch里40%的样本执行主题标签生成任务，剩下的60%做类目预测任务，然后走正常的语言模型自回归任务：
+
+$$
+L_{g e n}=-\frac{1}{T} \sum_{i=1}^T \log \left(p\left(o_i \mid o_{<i}, input\right)\right)
+$$
+
+然后将这两个loss加权求和($$\alpha = 0.01$$)：
+
+$$
+L=\frac{L_{c l}+\alpha L_{g e n}}{1+\alpha},
+$$
 
 # LLM+其他
 
