--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -481,6 +481,11 @@ batch内shuffle采样（有放回）
 
 ### Contrastive Loss
 
+[A Comprehensive Survey on Self-Supervised Learning for Recommendation](https://arxiv.org/pdf/2404.03354)
+
+[最新综述 | SSL4Rec: 全面探索自监督学习时代的推荐算法 (含开源代码和资料)](https://mp.weixin.qq.com/s/XvV67RK_9V56Sn5ncIBQSQ)
+
+[https://github.com/HKUDS/SSLRec](https://github.com/HKUDS/SSLRec)
 
 ### Triplet Loss
 
