--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1743,16 +1743,64 @@ Med-PaLM2([Towards expert- level medical question answering with large language 
 
 [RecurrentGemma: Moving Past Transformers for Efficient Open Language Models](https://storage.googleapis.com/deepmind-media/gemma/recurrentgemma-report.pdf)
 
+在infer阶段，需要检索**KV cache**，并加载到内存中，而KV cache会随着序列长度线性增长。[Longformer: The Long-Document Transformer](https://arxiv.org/pdf/2004.05150)通过**local attentnion**来降低cache大小，但模型效果会变差。recurrent gemma将输入序列**压缩到一个固定大小的state中**，从而不会降低效果，对长序列能降低内存占用并高效infer。
+
 基于Griffin架构，将**门控线性递归**与**本地滑动窗口注意力**混合在一起，在生成长序列时实现快速推理，相比gemma：
 
 + 减少内存用量：内存要求越低，就越能在内存有限的设备（例如单个 GPU 或 CPU）上生成较长的样本。
 + 吞吐量较高：能够以明显较高的batch_size执行推理，这意味着每秒可以生成更多tokens，尤其是在生成长序列时。
 
+相比原始griffin：
+
++ 对输入emb**乘以一个常数**（等于model width(下表中的2560)的平方根，不过这个代码里好像没有）。输入和输出的emb是tied的，这个常数**没有乘到output上去**。gemma里也有一个类似的因子
++ 对**recurrent layers（RG-LRU）**在训练时并**没有进行weight decay(本质是L2正则化，参考[https://zhuanlan.zhihu.com/p/607909453](https://zhuanlan.zhihu.com/p/607909453))**，当bp到**开方操作**时，为了训练稳定会加最大值为1000的**梯度clip**
+
+```python
+def __init__(self, ...):
+    #...
+    self.register_buffer(
+        "normalizer", torch.tensor(self.config.hidden_size**0.5, dtype=torch.bfloat16), persistent=False
+    )
+def forward(self, ...):
+    #...
+    if inputs_embeds is None:
+        inputs_embeds = self.embed_tokens(input_ids)
+
+    hidden_states = inputs_embeds
+
+    if use_cache and inputs_embeds.shape[1] != 1:  # TODO let's maybe only call in the `generate`?
+        self._setup_cache(self.config, hidden_states.shape[0], hidden_states.device, hidden_states.dtype)
+
+    if cache_position is None:
+        cache_position = torch.arange(hidden_states.shape[1], device=hidden_states.device)
+    if position_ids is None:
+        position_ids = cache_position.unsqueeze(0)
+
+    causal_mask = self._update_causal_mask(attention_mask, inputs_embeds, cache_position)
+
+    ## 这里就是那个因子
+    hidden_states = hidden_states * self.normalizer.type(hidden_states.dtype)
+```
+
+具体参数：
+
+| 总参数量 | 2.7b |
+| 非emb参数量 | 2.0b |
+| emb参数量 | 0.7b |
+|---|---|
+| vocab size | 256k |
+| model width | 2560 |
+| rnn width | 2560 |
+| MLP expansion factor | 3，即intermediate_size=2560*3=7680 |
+| Depth | 26 |
+| Attention heads | 10 |
+| local attention window size | 2048 |
+
 训练：
 
 [https://github.com/huggingface/transformers/blob/main/src/transformers/models/recurrent_gemma/modeling_recurrent_gemma.py](https://github.com/huggingface/transformers/blob/main/src/transformers/models/recurrent_gemma/modeling_recurrent_gemma.py)
 
-在线推理的C++实现
+在线推理的C++实现(cpu版本)
 
 [https://github.com/google/gemma.cpp](https://github.com/google/gemma.cpp)
 
@@ -5213,6 +5261,7 @@ $$
 ## Hawk & Griffin
 
 [RNN效率媲美Transformer，谷歌新架构两连发：同等规模强于Mamba](https://mp.weixin.qq.com/s/RtAZiEzjRWgqQw3yu3lvcg)
+
 
 
 ## feedback attention memory
