--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1752,14 +1752,15 @@ Med-PaLM2([Towards expert- level medical question answering with large language 
 
 相比原始griffin：
 
-+ 对输入emb**乘以一个常数**（等于model width(下表中的2560)的平方根，不过这个代码里好像没有）。输入和输出的emb是tied的，这个常数**没有乘到output上去**。gemma里也有一个类似的因子
++ 对输入emb**乘以一个常数**（等于model width(下表中的2560)的平方根，如下代码所示）。输入和输出的emb是tied的，这个常数**没有乘到output上去**。gemma里也有一个类似的因子
 + 对**recurrent layers（RG-LRU）**在训练时并**没有进行weight decay(本质是L2正则化，参考[https://zhuanlan.zhihu.com/p/607909453](https://zhuanlan.zhihu.com/p/607909453))**，当bp到**开方操作**时，为了训练稳定会加最大值为1000的**梯度clip**
 
 ```python
 def __init__(self, ...):
     #...
     self.register_buffer(
-        "normalizer", torch.tensor(self.config.hidden_size**0.5, dtype=torch.bfloat16), persistent=False
+        "normalizer", torch.tensor(self.config.hidden_size**0.5, 
+            dtype=torch.bfloat16), persistent=False
     )
 def forward(self, ...):
     #...
@@ -1768,15 +1769,19 @@ def forward(self, ...):
 
     hidden_states = inputs_embeds
 
-    if use_cache and inputs_embeds.shape[1] != 1:  # TODO let's maybe only call in the `generate`?
-        self._setup_cache(self.config, hidden_states.shape[0], hidden_states.device, hidden_states.dtype)
+    if use_cache and inputs_embeds.shape[1] != 1:  
+        # TODO let's maybe only call in the `generate`?
+        self._setup_cache(self.config, hidden_states.shape[0], 
+        hidden_states.device, hidden_states.dtype)
 
     if cache_position is None:
-        cache_position = torch.arange(hidden_states.shape[1], device=hidden_states.device)
+        cache_position = torch.arange(hidden_states.shape[1], 
+        device=hidden_states.device)
     if position_ids is None:
         position_ids = cache_position.unsqueeze(0)
 
-    causal_mask = self._update_causal_mask(attention_mask, inputs_embeds, cache_position)
+    causal_mask = self._update_causal_mask(attention_mask, 
+        inputs_embeds, cache_position)
 
     ## 这里就是那个因子
     hidden_states = hidden_states * self.normalizer.type(hidden_states.dtype)
@@ -1785,6 +1790,7 @@ def forward(self, ...):
 具体参数：
 
 | 总参数量 | 2.7b |
+|---|---|
 | 非emb参数量 | 2.0b |
 | emb参数量 | 0.7b |
 |---|---|
