--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1274,6 +1274,10 @@ $$
 
 [Griffin: Mixing Gated Linear Recurrences with Local Attention for Efficient Language Models](https://arxiv.org/pdf/2402.19427)
 
+global attention在infer阶段的效率和序列长度成二次关系，而且序列长度与KV cache呈线性增长关系。[Fast Transformer Decoding: One Write-Head is All You Need](https://arxiv.org/pdf/1911.02150)提出的multi-query attention(MQA)可以通过一个constant factor来减小cache size，部分缓解这个问题，但cache还是与序列长度线性相关。
+
+而循环模型能够将整个序列压缩到一个fixed-size的hidden state，并通过迭代进行更新。
+
 ## feedback attention memory
 
 [TransformerFAM: Feedback attention is working memory](https://arxiv.org/pdf/2404.09173.pdf)
