--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -81,6 +81,12 @@ CrossEntropyLoss就是把Softmax–Log–NLLLoss合并成一步
 
 [稠密特征加入CTR预估模型的方法汇总](https://mp.weixin.qq.com/s/xhxBbSYva4g9wUvQ5RIdVA)
 
+# tf开源库
+
+[社区分享 | TensorFlow Recommenders-Addons 现已开源，让推荐系统效果更好！](https://mp.weixin.qq.com/s/LKIuLYz8fP3BL3cB1CsHlw)
+
+[https://github.com/tensorflow/recommenders-addons](https://github.com/tensorflow/recommenders-addons)
+
 # 预估架构
 
 ## HugeCTR
