--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -5562,6 +5562,10 @@ $$
 
 # LLM模型融合
 
+[https://github.com/arcee-ai/mergekit](https://github.com/arcee-ai/mergekit)
+
+[SOLAR 10.7B: Scaling Large Language Models with Simple yet Effective Depth Up-Scaling](https://arxiv.org/pdf/2312.15166)
+
 [LLM 合并新思路：进化算法+零训练->新任务](https://mp.weixin.qq.com/s/eSWdLT0p5uyd32OOod5lKQ)
 
 [Evolutionary Optimization of Model Merging Recipes](https://arxiv.org/pdf/2403.13187)
