--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -2182,6 +2182,8 @@ GPT里用[Weight Tying](https://paperswithcode.com/method/weight-tying)提升效
 
 pytorch的[实现](https://github.com/pytorch/pytorch/blob/main/torch/utils/checkpoint.py)。大致逻辑是包了一个```autograd.Function```，前向时保存一些inputs/rng_state(RNG state是Random Number Generator state的缩写，**随机数生成器的状态**。在深度学习和其他计算任务中，随机数生成器用于初始化参数、决定正则化技术如dropout的行为，以及在训练过程中选择样本等。RNG状态是指随机数生成器当前的内部状态，它可以用来在需要时重现或恢复特定的随机数序列，确保实验或模型训练的可重复性)，反向时重新计算
 
+深度更深的时候，一般效果更好
+
 cpu offload：层数很深的时候，可能可以把一些计算挪到cpu上去，再搞回gpu
 
 ##### 张量并行（Tensor Parallelism）
